# healthhub-content-optimization

./: .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  asset-manifest.json  index.html  pyproject.toml  pyvenv.cfg  requirements.txt  run_tests.py  script.py  test_gh_actions.py
.dvc/: config
.github/: dependabot.yml
.github/workflows/: black.yml  lint-frontend.yml  lint.yml  publish-kedro-viz.yml  run-checks.yml  stale-bot.yml  validate-markdown.yml
api/: deploy-viz-metadata
api/nodes/: 0392f56b  046d6a6f  (+92 more)
article-harmonisation/: .env.example  Multi-agent collaboration.ipynb  README.md  app.py  checks.py  config.py  evaluations.py  harmonisation.py  main.py  main_harmonisation.py  models.py  prompt.py  prompts.py  prompts_archive.py  quickstart.py  requirements.txt  utils.py
backend/app/: EndpointDocs.yaml  README.md  pyproject.toml
backend/app/app/: main.py
backend/app/app/data/: .gitkeep  all-mpnet-base-v2_neo4j_edges.pkl  all-mpnet-base-v2_neo4j_pred_cluster.pkl  example.ipynb
backend/app/app/interfaces/: db_connector_types.py
backend/app/app/models/: README.md  article.py  cluster.py  combination.py  combine.py  edge.py  generated_article.py  group.py  harmonise.py  ignore.py  job.py  job_combine.py  job_ignore.py  job_optimise.py  job_remove.py  optimise.py  remark.py
backend/app/app/routes/: README.md
backend/app/app/routes/articles/: article_router.py
backend/app/app/routes/check/: check_router.py
backend/app/app/routes/clusters/: cluster_router.py
backend/app/app/routes/combine/: combine_router.py
backend/app/app/routes/groups/: group_router.py
backend/app/app/routes/harmonise/: harmonise_router.py
backend/app/app/routes/ignore/: ignore_router.py
backend/app/app/routes/optimise/: optimise_router.py
backend/app/app/scripts/populate_mongo/: beanie_documents.py  db_populator.py  main.py
backend/app/app/scripts/populate_mongo_mock/: main.py
backend/app/app/scripts/populate_mongo_mock/generators/: mocker.py  string_generator.py
backend/app/app/utils/: get_injected_db.py
backend/app/app/utils/app_builder/: README.md  app_builer.py
backend/app/app/utils/db_connector/mongo_connector/: beanie_documents.py  mongo_connector.py  mongo_connector_injector.py
content-optimization/: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db
content-optimization/conf/: README.md  logging.yml
content-optimization/conf/base/: catalog.yml  parameters_azure_rag.yml  parameters_clustering.yml  parameters_data_processing.yml  parameters_feature_engineering.yml
content-optimization/data/01_raw/: .gitignore  Synapxe Content Prioritisation - Live Healthy_020724.xlsx  all_contents.dvc  google_analytics.xlsx.dvc  ground_truth.xlsx.dvc  missing_contents.dvc
content-optimization/docs/: MERGED_DATA_INFO.md  PROCESSED_DATA_INFO.md  SETTING_UP_AZURE.md  SETTING_UP_NEO4J.md
content-optimization/docs/source/: conf.py  index.rst
content-optimization/notebooks/: IQuit.ipynb  README.md  bertopic.ipynb  bertopic_live_healthy.ipynb  bertopic_program_subpages.ipynb  check_image_links.ipynb  check_nested_divs.ipynb  check_url_status.ipynb  cluster_evaluation.ipynb  cluster_viz.ipynb  clustering.ipynb  columns.ipynb  create_annotation_excel_final.ipynb  create_ia_mappings.ipynb  evaluate_duplicates.ipynb  evaluate_ia_mappings.ipynb  evaluate_text_extraction.ipynb  exclude_articles.ipynb  exp_evaluation.ipynb  exp_evaluation_small_size.ipynb  extract.ipynb  extract_div.ipynb  extractor.ipynb  get_program_subpages.ipynb  group_program_subpages.ipynb  ia_mappings.ipynb  keyBert_program_subpages.ipynb  multilingual_text.ipynb  preprocess.ipynb  presentation.ipynb  recipes.ipynb  sbert_embeddings.ipynb  sub_grouping.ipynb  test.ipynb  tmp.ipynb  vaccinate.ipynb  word_count.ipynb
content-optimization/penv/: pyvenv.cfg
content-optimization/scripts/: get_raw_data.ps1  get_raw_data.sh  setup_dvc.ps1  setup_dvc.sh
content-optimization/src/content_optimization/: __init__.py  __main__.py  settings.py
content-optimization/src/content_optimization/datasets/: plotly.py
content-optimization/src/content_optimization/pipelines/azure_rag/: __init__.py  llm_extraction.py  nodes.py  pipeline.py
content-optimization/src/content_optimization/pipelines/clustering/: __init__.py  ctfidf.py  nodes.py  pipeline.py  utils.py
content-optimization/src/content_optimization/pipelines/data_processing/: columns.py  extract.py  extractor.py  nodes.py  pipeline.py  preprocess.py  utils.py
content-optimization/src/content_optimization/pipelines/data_science/: nodes.py  pipeline.py
content-optimization/src/content_optimization/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py  utils.py
content-optimization/src/content_optimization/utils/: extract.py
content-optimization/tests/: test_run.py
content-optimization/tests/pipelines/: conftest.py
content-optimization/tests/pipelines/azure_rag/: test_pipeline.py
content-optimization/tests/pipelines/clustering/: test_pipeline.py
content-optimization/tests/pipelines/data_processing/: conftest.py  test_nodes.py  test_pipeline.py
content-optimization/tests/pipelines/feature_engineering/: test_nodes.py  test_pipeline.py
docker/: Dockercompose.yaml  README.md
frontend/: README.md
notebooks/: clusterviz.ipynb  construct_graph.ipynb  doc2vec.ipynb  emb_sim_statistical.ipynb  embeddings.ipynb  embeddings_statistical.ipynb  glove.ipynb  logger.py  preprocess.ipynb  runner.ipynb  runner_statistical.ipynb  scores_eval.ipynb  similarity.ipynb  text_preprocessing.ipynb
(+143 files in other folders)
