[tool.ruff]
extend-include = ["*.ipynb"]

[tool.poetry]
name = "content-optimization"
version = "0.1.0"
description = ""
authors = ["Wilsven Leong <wilsven_leong96@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alive-progress = "3.1.5"
black = "24.4.2"
gensim = "4.3.2"
isort = "5.13.2"
matplotlib = "3.9.0"
nbqa = "1.8.5"
nltk = "3.8.1"
numpy = "1.26.4"
pandas = "2.2.2"
papermill = "2.6.0"
plotly = "5.22.0"
pre-commit = "3.7.1"
pyarrow = "16.1.0"
scikit-learn = "1.5.0"
scipy = "1.12.0"
seaborn = "0.13.2"
sentence-transformers = "3.0.1"
transformers = "4.41.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
