[tool.ruff]
extend-include = ["*.ipynb"]

[tool.poetry]
name = "content-optimization"
version = "0.1.0"
description = ""
authors = ["Wilsven Leong <wilsven_leong96@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alive-progress = "3.1.5"
beautifulsoup4 = "4.12.3"
black = "24.4.2"
gensim = "4.3.2"
isort = "5.13.2"
kaleido = "0.2.1"
kedro = "~=0.19.6"
kedro-datasets = ">=3.0.0"
kedro-telemetry = ">=0.3.1"
kedro-viz = ">=6.7.0"
keybert = "0.8.5"
matplotlib = "3.9.0"
nbqa = "1.8.5"
nltk = "3.9"
notebook = "6.4.12"
numpy = "1.26.4"
openpyxl = "3.1.4"
pandas = "2.2.2"
papermill = "2.6.0"
plotly = "5.22.0"
pre-commit = "3.7.1"
pyarrow = "16.1.0"
pytest = "~=7.2.0"
pytest-cov = "~=3.0.0"
pytest-mock = ">=1.7.1,<2.0.0"
ruff = "~=0.1.8"
scikit-learn = "1.5.0"
scipy = "1.12.0"
seaborn = "0.13.2"
sentence-transformers = "3.0.1"
transformers = "4.41.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipython = ">=8.10.0"
jupyterlab = ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
