[tool.ruff]
extend-include = ["*.ipynb"]

[tool.poetry]
name = "content-optimization"
version = "0.1.0"
description = ""
authors = ["Wilsven Leong <wilsven_leong96@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alive-progress = "3.1.5"
beautifulsoup4 = "4.12.3"
black = "24.10.0"
gensim = "4.3.3"
isort = "5.13.2"
kaleido = "0.2.1.post1"
kedro = "~=0.19.9"
kedro-datasets = ">=3.0.0"
kedro-telemetry = ">=0.3.1"
kedro-viz = ">=6.7.0"
keybert = "0.8.5"
matplotlib = "3.9.2"
nbqa = "1.9.0"
nltk = "3.9.1"
notebook = "7.2.2"
numpy = "1.26.4"
openpyxl = "3.1.5"
pandas = "2.2.3"
papermill = "2.6.0"
plotly = "5.24.1"
pre-commit = "4.0.1"
pyarrow = "17.0.0"
pytest = "~=8.3.3"
pytest-cov = "~=5.0.0"
pytest-mock = ">=1.7.1,<4.0.0"
ruff = "~=0.6.9"
scikit-learn = "1.5.2"
scipy = "1.13.1"
seaborn = "0.13.2"
sentence-transformers = "3.2.0"
transformers = "4.45.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipython = ">=8.10.0"
jupyterlab = ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
