[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "content_optimization"
readme = "README.md"
dynamic = ["dependencies", "version"]

[project.scripts]
content-optimization = "content_optimization.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.18.0",
    "sphinx~=3.4.3",
    "sphinx_rtd_theme==0.5.1",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.11.1",
    "sphinx_copybutton==0.3.1",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.1.0",
    "myst-parser~=0.17.2",
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "content_optimization.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "content_optimization"
project_name = "Content Optimization"
kedro_init_version = "0.19.6"
tools = ['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'Kedro Viz']
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/content_optimization -ra"""
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88
lint.pylint.max-args = 10
show-fixes = true
lint.select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
lint.ignore = ["E501", "I001", "PLR0912", "PLR0913", "T201"]  # Ruff format takes care of line-too-long
